Development Portal (2016-11-28 shi)
==============================
Updated BETA badge style
Updated search button style
Added welcome text section for new DISCOVER
Updated welcome text section styles
Removed Generator link
Added DISCOVER filter header
Minor css changes
Cleaned up feedback link
Changed Recipient to Recipient Country
Add disabled state for search link
Update bottom text on search view
Updated hover state search_intro links
Moved stats to the top
Updated filter text
Updated declare stats line-height


Development Portal (2016-11-22 shi)
==============================
Added div for better alignment of iati-identifier in SAVi
Added links to participating-org with activity-id in SAVi
Updated Print-friendly with changes


Development Portal (2016-11-18 shi)
==============================
Fixed identifier section in SAVi for longer ids
Minor fixes for Firefox rendering
Updated Print-friendly version for SAVi
Added loading nanobar for Print-friendly


Development Portal (2016-11-17 shi)
==============================
Added feedback links for search section
Updated styles and font sizes for data descriptions
Added translations for new sections
Added dropmenu on search view
Fixed dropmenu width issues
Adjusted image brightness on search view
Added Generator banner to search view
Updated missing view header text
Added sorting icons to publishers view
Updated styles for data quality page


Development Portal (2016-11-16 shi)
==============================
Fixed transaction links colours in all states for SAVi
Updated style for reporting-org in SAVi
Updated table styles for budgets and transactions in SAVi
Fixed hover state for last column in money table
Added sorting icons for money table
Fixed money table colours
Removed {table_declare} from money table views
Adding index bits to search view


Development Portal (2016-11-08 shi)
==============================
Colour change for reporting-org in SAVi
Links colours update


Development Portal (2016-10-29 shi)