@@ -1,7 +1,7 @@
 /* CSS for Search page */
 
 .typeahead, .tt-query, .tt-hint {width:396px; height:30px; padding:8px 12px; font-size:24px; line-height:30px; -webkit-border-radius:0; -moz-border-radius:0; border-radius:0; outline:none;}
-.typeahead, input {background-color:transparent !important; border-bottom:1px solid #fff !important; border-radius:0 !important; }
+.typeahead, input {background-color:transparent !important; border-bottom:2px solid #fff !important; border-radius:0 !important; }
 .typeahead:focus {border:2px solid #0097cf;}
 .tt-hint {color:#999;}
 .tt-menu {width:100%; margin:12px 0; padding:8px 0; background-color:#fff;max-height:320px; overflow-y:auto;}
