@@ -946,13 +946,13 @@ Search
 Type (eg. earthquake) or select filters to narrow your search
 
 #search_publisher_dropmenu_text trim=ends
-Type to search for a Publisher
+Search for a Publisher
 
 #search_country_dropmenu_text trim=ends
-Type to search for a Recipient Country
+Search for a Recipient Country
 
 #all_countries_text
-Compare all Countries
+Compare all Recipient Countries
 
 #all_publishers_text
 Compare all Publishers
