@@ -108,7 +108,7 @@
 
 	<div id="search_div"><span id="addfilter_span"></span><span id="result_span"></span><a id="search_link" class="search_link_disable">{search_button1_txt}</a></div>
 
-	<input type="text" id="view_search_string" class="typeahead" placeholder="{search_placeholder_txt}"/>
+	<div class="search_input_wrap"><div class="search_icon"><img src="/art/original/search_icon.png" width="30" height="30"/></div><input type="text" id="view_search_string" class="typeahead" placeholder="{search_placeholder_txt}"/></div>
 	
 </div>
 
