@@ -1,3 +1,10 @@
+Development Portal (2016-11-29 shi)
+==============================
+Added search icon for DISCOVER
+Updated text for search boxes
+
+
+
 Development Portal (2016-11-28 shi)
 ==============================
 Updated BETA badge style
